# n

./: BLUEPRINT.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TARGETS.md
.github/workflows/: ci.yml  interop-golden-vector.yml  release-on-tag.yml  snapshot-guard.yml
air/pruning/: SPEC.md
air/state/: README.md
air/tx/: SPEC.md
benches/: air_benches.rs  fri_benches.rs  merkle_benches.rs  params_benches.rs  transcript_benches.rs
docs/: PROOF_ABI.md  PROOF_SIZE_GATE.md  PUBLIC_INPUTS_ENCODING.md  RELEASE_NOTES.md  SNAPSHOTS.md  STWO_INTEROP.md
scripts/ci/: interop_golden_check  snapshot_guard_check
src/: lib.rs
src/air/: boundary.rs  composition.rs  constraints.rs  context.rs  descriptors.rs  errors.rs  ids.rs  inputs.rs  mod.rs  parallel.rs  selectors.rs  trace.rs  traits.rs  transition.rs  types.rs
src/backend/: mod.rs
src/config/: mod.rs
src/fft/: ifft.rs  lde.rs  mod.rs
src/field/: mod.rs  polynomial.rs  prime_field.rs  tests.rs
src/fri/: batch.rs  config.rs  folding.rs  layer.rs  mod.rs  proof.rs  prover.rs  types.rs  verifier.rs
src/hash/: blake3.rs  config.rs  deterministic.rs  merkle.rs  mod.rs  poseidon.rs
src/merkle/: deterministic.rs  mod.rs  proof.rs  ser.rs  traits.rs  tree.rs  types.rs
src/params/: builder.rs  hash.rs  mod.rs  ser.rs  stark_params.rs  types.rs  validate.rs
src/proof/: aggregation.rs  api.rs  envelope.rs  errors.rs  mod.rs  params.rs  prover.rs  public_inputs.rs  ser.rs  transcript.rs  types.rs  verifier.rs
src/ser/: bytes.rs  collections.rs  cursor.rs  digest.rs  error.rs  felt.rs  ints.rs  (+1 more)
tests/: _fixtures.rs  air_end_to_end.rs  air_prune.rs  air_state.rs  air_tx.rs  backend_interop.rs  fail_matrix.rs  fft.rs  fri_end_to_end.rs  fri_proof_serialization.rs  golden_vector_export.rs  interop.rs  lde.rs  limits.rs  merkle_roundtrip.proptest-regressions  merkle_roundtrip.rs  parallel_equivalence.rs  params_roundtrip.rs  proof_artifacts.rs  proof_composition.rs  proof_fail_matrix.rs  proof_fri_glue.rs  proof_header_min.rs  proof_lifecycle.rs  proof_merkle.rs  proof_merkle_quaternary.rs  proof_openings_indices.rs  proof_skeleton_compiles.rs  proof_transcript_queries.rs  ser_primitives.rs  ser_structures.rs  spec.md  spec.rs  transcript_determinism.rs
(+91 files in other folders)
