[package]
name = "rpp-stark"
version = "0.1.0"
edition = "2021"
authors = ["RPP Core Team"]
description = "Deterministic STARK proof engine for the RPP blockchain."
license = "MIT"

[lib]
name = "rpp_stark"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
audit-lde = []
audit-lde-hisec = ["audit-lde"]
parallel = []

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bincode = "1"
insta = { version = "1", features = ["json"] }
proptest = "1"
serde_json = "1"

[[bench]]
name = "params_benches"
harness = false

[[bench]]
name = "transcript_benches"
harness = false

[[bench]]
name = "merkle_benches"
harness = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]
