[package]
name = "rpp-stark"
version = "1.0.0-beta"
edition = "2021"
authors = ["RPP Core Team"]
description = "Deterministic STARK proof engine for the RPP blockchain."
license = "MIT"
rust-version = "1.79"

[lib]
name = "rpp_stark"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
audit-lde = []
audit-lde-hisec = ["audit-lde"]
parallel = ["rayon"]
backend-rpp-stark = []

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
rayon = { version = "1.8", optional = true }
blake2 = "0.10"

[dev-dependencies]
bincode = "1"
insta = { version = "1", features = ["json"] }
hex-literal = "0.4"
proptest = "1"
serde_json = "1"
once_cell = "1"

[[bench]]
name = "params_benches"
harness = false

[[bench]]
name = "transcript_benches"
harness = false

[[bench]]
name = "merkle_benches"
harness = false

[[bench]]
name = "fri_benches"
harness = false

[[bench]]
name = "air_benches"
harness = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]
